@@ -2,13 +2,23 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>SouthTown</groupId>
   <artifactId>barcoding</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>SouthTown Barcoder</name>
-  <description>This project create weight embedded barcodes.</description>
+  <description>This project creates weight embedded barcodes.</description>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>25</maven.compiler.release>
-		<javafx.version>25.0.1</javafx.version>
+		<maven.compiler.release>21</maven.compiler.release>
+		<javafx.version>22</javafx.version>
+		
+		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+		<gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
+		<main.class>app.MainApp</main.class>
+
+		<app.identifier>barcodeencoder</app.identifier>
+		<app.description>App to print weight embedded barcodes.</app.description>
+		<package.type />
+		<module.name>southtown</module.name>
+		<vendor>Southtown Market</vendor>
   </properties>
   <dependencies>
 		<dependency>
@@ -26,17 +36,220 @@
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 			<version>${javafx.version}</version>
+		</dependency>		
+		
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.4</version>
 		</dependency>
   </dependencies>
   <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
-        <configuration>
-          <release>21</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>${maven.compiler.release}</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>${javafx.maven.plugin.version}</version>
+				<configuration>
+					<mainClass>${main.class}</mainClass>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.3.1</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<!-- here the phase you need -->
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/gluonfx/x86_64-windows</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}</directory>
+									<filtering>true</filtering>
+									<includes>
+										<include>*.csv</include>
+										<include>header.txt</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-resources1</id>
+						<!-- here the phase you need -->
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/defaults</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}</directory>
+									<filtering>true</filtering>
+									<includes>
+										<include>default*.csv</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<includes>
+						<include>*Test*.java</include>
+					</includes>
+					<argLine>@{argLine} --add-exports
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-opens
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<outputDirectory>target/jars</outputDirectory>
+					<excludes>**/maven/*</excludes>
+					<excludes>**/native-image/*</excludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.6.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<artifactSet>
+								<excludes>
+									<exclude>org.junit.jupiter:*</exclude>
+									<exclude>org.apiguardian:*</exclude>
+									<exclude>org.opentest4j:*</exclude>
+									<exclude>org.junit.platform:*</exclude>
+									<exclude>org.panteleyev:*</exclude>
+									<exclude>org.apache.maven.shared:*</exclude>
+									<exclude>org.opentest4j:*</exclude>
+								</excludes>
+							</artifactSet>
+							<shadedArtifactAttached>false</shadedArtifactAttached>
+							<shadedClassifierName>project-classifier</shadedClassifierName>
+							<outputFile>target\shade\${project.artifactId}.jar</outputFile>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>${main.class}</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<!--has problem with automatic modules -->
+				<!-- run with command clean package jpackage:jpackage@win -->
+				<groupId>org.panteleyev</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>1.6.4</version>
+
+				<configuration>
+					<name>Barcoder</name>
+					<appVersion>${project.version}</appVersion>
+					<vendor>${vendor}</vendor>
+					<input>target\shade\</input>
+					<mainClass>${main.class}</mainClass>
+					<mainJar>${project.artifactId}.jar</mainJar>
+					<destination>target/dist</destination>
+					<appContentPaths>defaults</appContentPaths>
+					<javaOptions>
+						<option>-Dfile.encoding=UTF-8</option>
+					</javaOptions>
+					<winDirChooser>true</winDirChooser>
+					<winShortcut>true</winShortcut>
+					<winMenu>true</winMenu>
+					<winMenuGroup>Southtown Market</winMenuGroup>						
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>win</id>
+						<configuration>
+							<icon>icons/icon.ico</icon>
+							<winMenu>true</winMenu>		
+							<type>MSI</type>		
+													
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>desktop</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<gluonfx.target>host</gluonfx.target>
+			</properties>
+		</profile>
+	</profiles>
 </project>
